--- a/.gitignore
+++ b/.gitignore
@@ -63,3 +63,5 @@
 *.wlf
 1.1 Easy to understand/le13_VGA/simulation/modelsim/rtl_work/_vmake
 1.1 Easy to understand/le13_VGA/simulation/modelsim/rtl_work/_info
+*.jpg
+*.tdf
