--- a/1.1 Easy to understand/le14_uart_text1/uart.qsf
+++ b/1.1 Easy to understand/le14_uart_text1/uart.qsf
@@ -52,3 +52,6 @@ set_global_assignment -name NOMINAL_CORE_SUPPLY_VOLTAGE 1.2V
 set_global_assignment -name EDA_SIMULATION_TOOL "ModelSim (Verilog)"
 set_global_assignment -name EDA_TIME_SCALE "1 ps" -section_id eda_simulation
 set_global_assignment -name EDA_OUTPUT_DATA_FORMAT "VERILOG HDL" -section_id eda_simulation
+set_global_assignment -name VERILOG_FILE uart.v
+set_global_assignment -name VERILOG_FILE speed_sel.v
+set_global_assignment -name VERILOG_FILE uart_rx.v
