--- a/1.1 Easy to understand/le14_uart/my_uart_top.qsf
+++ b/1.1 Easy to understand/le14_uart/my_uart_top.qsf
@@ -28,7 +28,7 @@ set_global_assignment -name FAMILY "Cyclone IV E"
 set_global_assignment -name TOP_LEVEL_ENTITY my_uart_top
 set_global_assignment -name ORIGINAL_QUARTUS_VERSION 7.0
 set_global_assignment -name PROJECT_CREATION_TIME_DATE "20:12:09  OCTOBER 17, 2008"
-set_global_assignment -name LAST_QUARTUS_VERSION "11.0 SP1"
+set_global_assignment -name LAST_QUARTUS_VERSION 13.0
 set_location_assignment PIN_R9 -to clk
 set_location_assignment PIN_M1 -to rst_n
 set_location_assignment PIN_G5 -to rs232_tx
@@ -43,7 +43,6 @@ set_global_assignment -name AUTO_RESTART_CONFIGURATION OFF
 set_global_assignment -name LL_ROOT_REGION ON -section_id "Root Region"
 set_global_assignment -name LL_MEMBER_STATE LOCKED -section_id "Root Region"
 set_global_assignment -name STRATIX_DEVICE_IO_STANDARD "3.3-V LVTTL"
-set_global_assignment -name MISC_FILE "C:/franchiese/GR/BJ-EPM/实验例程以及说明文档0316/8、串口通信/uartverilog/my_uart_top.dpf"
 set_global_assignment -name MIN_CORE_JUNCTION_TEMP 0
 set_global_assignment -name MAX_CORE_JUNCTION_TEMP 85
 set_global_assignment -name DEVICE_FILTER_PACKAGE FBGA
@@ -59,4 +58,16 @@ set_global_assignment -name OUTPUT_IO_TIMING_NEAR_END_VMEAS "HALF VCCIO" -fall
 set_global_assignment -name OUTPUT_IO_TIMING_FAR_END_VMEAS "HALF SIGNAL SWING" -rise
 set_global_assignment -name OUTPUT_IO_TIMING_FAR_END_VMEAS "HALF SIGNAL SWING" -fall
 set_global_assignment -name CYCLONEIII_CONFIGURATION_DEVICE EPCS16
+set_global_assignment -name VHDL_FILE DigitalLed.vhd
+set_global_assignment -name VERILOG_FILE DigitalLed.v
+set_location_assignment PIN_P6 -to cs[1]
+set_location_assignment PIN_N6 -to cs[0]
+set_location_assignment PIN_N11 -to dx[7]
+set_location_assignment PIN_P11 -to dx[6]
+set_location_assignment PIN_M10 -to dx[5]
+set_location_assignment PIN_M9 -to dx[4]
+set_location_assignment PIN_N9 -to dx[3]
+set_location_assignment PIN_P9 -to dx[2]
+set_location_assignment PIN_L7 -to dx[1]
+set_location_assignment PIN_M8 -to dx[0]
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
